manifest/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-k3s.yml
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose-k3s.yml
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: realestate_db
            - name: POSTGRES_PASSWORD
              value: "123456"
            - name: POSTGRES_USER
              value: team01realestate
          image: postgres:16
          name: db
          ports:
            - containerPort: 5432
              protocol: TCP
      restartPolicy: Always
