manifest/true-roots-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-k3s.yml
    kompose.image-pull-secret: regcred
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: true-roots-backend
  name: true-roots-backend
spec:
  ports:
    - name: "8090"
      port: 8090
      targetPort: 8090
  selector:
    io.kompose.service: true-roots-backend
