manifest/true-roots-frondtend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-k3s.yml
    kompose.image-pull-secret: regcred
    kompose.service.expose: realestate.datastreamcenter.com
    kompose.service.nodeport.port: "30001"
    kompose.service.type: nodeport
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: true-roots-frondtend
  name: true-roots-frondtend
spec:
  ports:
    - name: "80"
      nodePort: 30001
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: true-roots-frondtend
  type: NodePort
