manifest/true-roots-frondtend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-k3s.yml
    kompose.image-pull-secret: regcred
    kompose.service.expose: realestate.datastreamcenter.com
    kompose.service.nodeport.port: "30001"
    kompose.service.type: nodeport
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: true-roots-frondtend
  name: true-roots-frondtend
spec:
  rules:
    - host: realestate.datastreamcenter.com
      http:
        paths:
          - backend:
              service:
                name: true-roots-frondtend
                port:
                  number: 80
            path: /
            pathType: Prefix
